--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
-language: node_js
-node_js:
-  - "8"
-
 script:
-  - npm run lint
+  - npm install linteverything@latest
+  - printf "module.exports={ignore:['node_modules','package-lock.json','.git','.travis.yml'],verbose:true};" > .linteverythingrc.js
+  - node ./node_modules/linteverything/bin/linteverything.js
