Revert "Make use of default .travis.yml"
This reverts commit a732258f174c2a8dc9704323e3b9f03a52605eb2.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+language: node_js
+node_js:
+  - "8"
+
 script:
-  - npm install linteverything@latest
-  - printf "module.exports={ignore:['node_modules','package-lock.json','.git','.travis.yml'],verbose:true};" > .linteverythingrc.js
-  - node ./node_modules/linteverything/bin/linteverything.js
+  - npm run lint
